# TugasTerstruktur-JST

./: .gitignore  .gitmodules  CMakeLists.txt  Hasil Analisa Confusion Matrix pada hasil pengujian.xlsx  Implementasi Multiple Layer Perceptron.docx  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
